--- a/exercises/CSS/grid.html
+++ b/exercises/CSS/grid.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="grid.css">
 </head>
 <body>
-    <header class="header el">Header</header>
+    <header class="header el">
+        <nav>
+            <ul>
+                <li><a href="#!" class="li">History</a></li>
+                <li><a href="#!" class="li">Geography</a></li>
+                <li><a href="#!" class="li">Nature</a></li>
+                <li><a href="#!" class="li">People</a></li>
+            </ul>
+        </nav>
+
+
+
+    </header>
     <main class="container">
         <div class="box">1</div>
         <div class="box">2</div>
